orders/deployment.yaml
apiVersion: v1
kind: Deployment
metadata:
  name: orders-deployment
  namespace: default
spec:
  selector:
    matchLabels:
      name: orders
  replicas: 4 # tells deployment to run 2 pods matching the template
  template: # create pods using pod definition in this template
    metadata:
      # unlike pod.yaml, the name is not included in the meta data as a unique name is
      # generated from the deployment name
      labels:
        name: orders
    spec:
      containers:
      - name: orders
        image: anthonynguyenthanh/orders:v1
        ports:
        - containerPort: 8080
